Conclusão de algumas atividades

--- a/Atividades/cssexterno.html
+++ b/Atividades/cssexterno.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
+
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,11 +11,13 @@
 <body>
     <h1 id="titulo3">Trabalhando com css externo</h1>
     <hr/>
+    <div>
     <button id="salvar">Salvar</button>
     <button id="excluir">Excluir</button>
     <button id="cancelar">Cancelar</button>
+</div>
     <br/>
-    <a href="index.html">Voltar</a>
+    <a id="voltar" href="index.html">Voltar</a>
 </body>
 
 </html>
