--- a/Atividades/fotos.html
+++ b/Atividades/fotos.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fotos</title>
 </head>
+
 <body>
-    <h1>Fotos</h1>
-    <p>Gatos fechando contrato</p>
-    <img src="./imagens/gatos.png"/> <br/>
+    <style>
+        #getafe {
+            width: 200px;
+        }
 
-    <a href="https://www.meuzapzap.com/imagens/baixar/animais/4998/zap/">
-    <img src="./imagens/dogbravo.jpg" />
+        #gremio {
+            width: 500px;
+        }
+    </style>
+
+    <h1>Fotos com link</h1>
+    <p>Logo do Getafe</p>
+    <a href="https://www.getafecf.com/">
+        <img id="getafe" src="./imagens/getafe-logo.png" />
     </a>
-    <p>Cachorro em pé bravo</p>
 
-    <br/>
-    <a href="index.html">Voltar</a>
+    <a href="https://www.gremio.net/">
+        <img id="gremio" src="./imagens/logo-gremio.png" />
+    </a>
+    <p>Logo do Grêmio</p>
+
+    <br />
+    <a id="voltar" href="index.html">Voltar</a>
 </body>
+
 </html>
