--- a/Atividades/inputs.html
+++ b/Atividades/inputs.html
@@ -14,7 +14,7 @@
 
     <label>Informe seu telefone</label>
     <br/>
-    <input type="tel">
+    <input type="tel" placeholder="Ex: (47) 91234-5678">
     <button>Clique aqui</button>
     <br/><br/>
 
@@ -29,7 +29,7 @@
     <input type="radio" name="time ruim"> São Paulo</input>
 
     <br/>
-    <a href="index.html">Voltar</a>
+    <a id="voltar" href="index.html">Voltar</a>
 
 
 </body>
