--- a/Exercicios/index.html
+++ b/Exercicios/index.html
@@ -31,7 +31,7 @@
             dolores id officiis, repellat dolor assumenda suscipit laboriosam doloribus minima illo illum ullam. Nobis
             atque aliquam optio.</p>
     </div>
-    <div>
+    <div id="click">
         <button>Clicar</button>
     </div>
 
