--- a/Exercicios/page.html
+++ b/Exercicios/page.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href=style.css>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body id="mypage">
 
-    <img id="lucas" src="/Exercicios/fotos/lucas2.PNG">
+    <div class="profile-container">
+        <img id="lucas" src="/Exercicios/fotos/lucas2.PNG">
+        <p id="apres">
+            Olá, eu me chamo Lucas Antonio, tenho 18 anos e estou ingressando na área da programação através do Entra21, com a linguagem Java.
+        </p>
+    </div>
     <hr />
 
     <h2>Lucas Antonio Gonçalves</h2>
@@ -18,10 +21,9 @@
     <div class="links">
         <a href="https://www.linkedin.com/in/lucasagoncalves/" target="_blank">LinkedIn</a>
         <a href="https://github.com/lucasantoniog" target="_blank">GitHub</a>
-        <a href="lucasantoniogoncalves20@gmail.com" target="_blank">Gmail</a>
+        <a href="mailto:lucasantoniogoncalves20@gmail.com" target="_blank">Gmail</a>
     </div>
 
     <a id="links" href="index.html">Início</a>
 </body>
-
 </html>
