Continuação dos Exercícios

--- a/SiteExercicio/album.html
+++ b/SiteExercicio/album.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cardápio - Sabores da Casa</title>
 </head>
+
 <body>
-    <a href="index.html">Início</a>
+    <div id="navbar">
+        <a href="index.html"><img id="logo" src="/SiteExercicio/image-removebg-preview.png" alt="Logo"></a>
+        <div class="nav-links">
+            <a href="cadastro.html">Cadastro</a>
+            <a href="album.html">Cardápio</a>
+            <a href="sobre.html">Sobre nós</a>
+            <a href="consulta.html">Consulta</a>
+        </div>
+    </div>
+
+    <h1 id="nome">Pratos Principais</h1>
+
+    <div class="menu-container">
+        <div class="menu-item">
+            <img src="/SiteExercicio/album/Tagliatelle ao Molho Pomodoro.jpeg" alt="Pasta italiana" class="menu-img">
+            <h3>Tagliatelle ao Molho Pomodoro</h3>
+            <p>Deliciosa massa caseira servida com molho de tomate fresco.</p>
+        </div>
+        <div class="menu-item">
+            <img src="/SiteExercicio/album/Pizza Margherita.jpeg" alt="Pizza italiana" class="menu-img">
+            <h3>Pizza Margherita</h3>
+            <p>Clássica pizza italiana com molho de tomate, mussarela e manjericão.</p>
+        </div>
+        <div class="menu-item">
+            <img src="/SiteExercicio/album/Risoto de Cogumelos.jpeg" alt="Risoto italiano" class="menu-img">
+            <h3>Risoto de Cogumelos</h3>
+            <p>Arroz cremoso preparado com cogumelos frescos e parmesão.</p>
+        </div>
+        <h1 id="nome">Sobremesas</h1>
+        <div class="menu-item">
+            <img src="/SiteExercicio/album/tiramisù.jpeg" alt="Tiramisù" class="menu-img">
+            <h3>Tiramisù</h3>
+            <p>Clássica sobremesa italiana feita com camadas de biscoito embebido em café, creme mascarpone e cacau.</p>
+        </div>
+        <div class="menu-item">
+            <img src="/SiteExercicio/album/panna cotta.png" alt="Panna Cotta" class="menu-img">
+            <h3>Panna Cotta</h3>
+            <p>Sobremesa cremosa à base de creme de leite, açúcar e baunilha, servida com calda de frutas vermelhas.</p>
+        </div>
+    </div>
+
+    <div id="footer">
+        <p>&copy; 2025 Sabores da Casa - Todos os direitos reservados.</p>
+        <a href="https://www.linkedin.com/in/lucasagoncalves/" target="_blank" id="linkedin-link">
+            <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
+    </div>
 </body>
+
 </html>
