--- a/SiteExercicio/login.html
+++ b/SiteExercicio/login.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>Cadastro - Sabores da Casa</title>
+    <title>Login - Sabores da Casa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Cadastro</h1>
+    <h1>Login</h1>
     <form>
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome">
         <label for="email">E-mail:</label>
         <input type="email" id="email" name="email">
         <label for="password">Senha:</label>
         <input type="password" id="password" name="password">
-        <button type="submit">Cadastrar</button>
+        <button type="submit">Entrar</button>
     </form>
 </body>
 </html>
