Implementando Flexbox na página de Cardápio

--- a/SiteExercicio/album.html
+++ b/SiteExercicio/album.html
@@ -6,16 +6,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio - Sabores da Casa</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div id="navbar">
         <a href="index.html"><img id="logo" src="/SiteExercicio/image-removebg-preview.png" alt="Logo"></a>
-        <div class="nav-links">
+        <div class="nav-center">
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="album.html">Cardápio</a>
+                <a href="sobre.html">Sobre nós</a>
+                <a href="consulta.html">Consulta</a>
+            </div>
+        </div>
+        <div class="nav-direita">
+            <a href="login.html">Login</a>
             <a href="cadastro.html">Cadastro</a>
-            <a href="album.html">Cardápio</a>
-            <a href="sobre.html">Sobre nós</a>
-            <a href="consulta.html">Consulta</a>
         </div>
     </div>
 
@@ -37,19 +44,23 @@
             <h3>Risoto de Cogumelos</h3>
             <p>Arroz cremoso preparado com cogumelos frescos e parmesão.</p>
         </div>
-        <h1 id="nome">Sobremesas</h1>
+    </div>
+
+    <h1 id="nome">Sobremesas</h1>
+    
+    <div class="menu-container">
         <div class="menu-item">
             <img src="/SiteExercicio/album/tiramisù.jpeg" alt="Tiramisù" class="menu-img">
             <h3>Tiramisù</h3>
             <p>Clássica sobremesa italiana feita com camadas de biscoito embebido em café, creme mascarpone e cacau.</p>
         </div>
         <div class="menu-item">
-            <img src="/SiteExercicio/album/panna cotta.png" alt="Panna Cotta" class="menu-img">
+            <img src="/SiteExercicio/album/panna cotta.jpeg" alt="Panna Cotta" class="menu-img">
             <h3>Panna Cotta</h3>
             <p>Sobremesa cremosa à base de creme de leite, açúcar e baunilha, servida com calda de frutas vermelhas.</p>
         </div>
     </div>
-
+    <br><br><br>
     <div id="footer">
         <p>&copy; 2025 Sabores da Casa - Todos os direitos reservados.</p>
         <a href="https://www.linkedin.com/in/lucasagoncalves/" target="_blank" id="linkedin-link">
@@ -57,5 +68,4 @@
         </a>
     </div>
 </body>
-
 </html>
