--- a/SiteExercicio/sobre.html
+++ b/SiteExercicio/sobre.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <title>Sobre Nós - Sabores da Casa</title>
     <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre Nós - Sabores da Casa</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
-    <h1>Sobre Nós</h1>
-    <p>Conheça mais sobre nossa história e tradição.</p>
+    <div id="navbar">
+        <a href="index.html"><img id="logo" src="/SiteExercicio/image-removebg-preview.png" alt="Logo"></a>
+        <div class="nav-center">
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="album.html">Cardápio</a>
+                <a href="sobre.html">Sobre nós</a>
+                <a href="consulta.html">Consulta</a>
+            </div>
+        </div>
+        <div class="nav-direita">
+            <a href="login.html">Login</a>
+            <a href="cadastro.html">Cadastro</a>
+        </div>
+    </div>
+
+
+    <h1 id="nome">Sobre Nós</h1>
+
+    <div id="sobre-container">
+        <p>O restaurante <strong>Sabores da Casa</strong> nasceu do desejo de trazer para você o melhor da culinária italiana, com ingredientes frescos, receitas autênticas e um ambiente acolhedor. Nossa missão é proporcionar experiências gastronômicas inesquecíveis, onde cada prato conta uma história e cada refeição é um momento especial.</p>
+        
+        <h2>Nossa História</h2>
+        <p>Fundado em 2010 por uma família apaixonada pela gastronomia, o Sabores da Casa começou como uma pequena cantina e rapidamente conquistou o coração dos clientes. Hoje, somos referência em pratos italianos preparados com carinho e tradição.</p>
+        
+        <h2>Nosso Compromisso</h2>
+        <p>Prezamos pela qualidade e pela satisfação dos nossos clientes. Nossos chefs utilizam ingredientes selecionados para garantir um sabor autêntico e inesquecível em cada refeição.</p>
+    </div>
+
+    <div id="footer">
+        <p>&copy; 2025 Sabores da Casa - Todos os direitos reservados.</p>
+        <a href="https://www.linkedin.com/in/lucasagoncalves/" target="_blank" id="linkedin-link">
+            <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
+    </div>
 </body>
 </html>
