--- a/SiteExercicio/login.html
+++ b/SiteExercicio/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>Cadastro - Sabores da Casa</title>
+    <title>Login - Sabores da Casa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,24 +20,18 @@
             <a href="cadastro.html">Cadastro</a>
         </div>
     </div>
-    
-    <h1 id="nome">Cadastro</h1>
+
+    <h1 id="nome">Login</h1>
 
     <div class="consulta-container">
         <form class="consulta-form">
-            <label for="nome">Nome Completo</label>
-            <input type="text" id="name" name="nome" placeholder="Digite seu nome completo" required>
-
             <label for="email">E-mail</label>
             <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
 
-            <label for="senha">Senha</label>
-            <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
+            <label for="password">Senha</label>
+            <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
 
-            <label for="confirmar-senha">Confirmar Senha</label>
-            <input type="password" id="confirmar-senha" name="confirmar-senha" placeholder="Confirme sua senha" required>
-
-            <button type="submit">Cadastrar</button>
+            <button type="submit">Entrar</button>
         </form>
     </div>
 
